<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainMenuFragment">

    <ImageView
        android:id="@+id/background_mainmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/mainmenu_title"
        android:layout_width="@dimen/mainmenu_title_holder_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainmenu_title_holder_margin_top"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_mainmenu"
        app:srcCompat="@drawable/title_holder" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titlefont"
        android:text="@string/mainmenu_title"
        android:textColor="@color/dark_brown"
        android:textSize="@dimen/mainmenu_title_text"
        app:layout_constraintBottom_toBottomOf="@+id/mainmenu_title"
        app:layout_constraintEnd_toEndOf="@+id/mainmenu_title"
        app:layout_constraintStart_toStartOf="@+id/mainmenu_title"
        app:layout_constraintTop_toTopOf="@+id/mainmenu_title" />

    <Button
        android:id="@+id/newGameBtn"
        android:layout_width="@dimen/mainmenu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainmenu_first_button_margin_top"
        android:text="@string/new_game_button"
        android:textColor="@color/dark_brown"
        android:textSize="@dimen/mainmenu_button_text"
        android:fontFamily="@font/titlefont"
        android:backgroundTint="@color/light_brown_3"
        app:cornerRadius="30dp"
        app:strokeWidth="1.5dp"
        app:strokeColor="@color/light_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainmenu_title" />

    <Button
        android:id="@+id/leaderboardBtn"
        android:layout_width="@dimen/mainmenu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainmenu_button_margin_top"
        android:text="@string/leaderboard_button"
        android:textColor="@color/dark_brown"
        android:textSize="@dimen/mainmenu_button_text"
        android:fontFamily="@font/titlefont"
        android:backgroundTint="@color/light_brown_3"
        app:cornerRadius="30dp"
        app:strokeWidth="1.5dp"
        app:strokeColor="@color/light_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameBtn" />

    <Button
        android:id="@+id/rulebookBtn"
        android:layout_width="@dimen/mainmenu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainmenu_button_margin_top"
        android:text="@string/rulebook_button"
        android:textColor="@color/dark_brown"
        android:textSize="@dimen/mainmenu_button_text"
        android:fontFamily="@font/titlefont"
        android:backgroundTint="@color/light_brown_3"
        app:cornerRadius="30dp"
        app:strokeWidth="1.5dp"
        app:strokeColor="@color/light_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboardBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>